fix issue on details not showing genre

--- a/src/components/features/error/error.module.css
+++ b/src/components/features/error/error.module.css
@@ -1,24 +1,28 @@
-.main{
-    display: table;
-    width: 100%;
-    height: 100vh;
-    text-align: center;
+.main {
+  display: table;
+  width: 100%;
+  height: 100vh;
+  text-align: center;
 }
 
-.fof{
-    display: table-cell;
-    vertical-align: middle;
+.fof {
+  display: table-cell;
+  vertical-align: middle;
 }
 
-.fof h1{
-    font-size: 50px;
-    display: inline-block;
-    padding-right: 12px;
-    animation: type .5s alternate infinite;
-    color: white;
+.fof h1 {
+  font-size: 50px;
+  display: inline-block;
+  padding-right: 12px;
+  animation: type 0.5s alternate infinite;
+  color: white;
 }
 
-@keyframes type{
-    from{box-shadow: inset -3px 0px 0px #888;}
-    to{box-shadow: inset -3px 0px 0px transparent;}
+@keyframes type {
+  from {
+    box-shadow: inset -3px 0px 0px #888;
+  }
+  to {
+    box-shadow: inset -3px 0px 0px transparent;
+  }
 }
